 * Add rich text editor text shortcuts undo, to allow typing text normally detected as a shortcut (Thibaud Colas)
 * Add support for right-to-left (RTL) languages to the rich text editor (Thibaud Colas)
 * Change rich text editor placeholder to follow the user’s focus on empty blocks (Thibaud Colas)
 * Add rich text editor empty block highlight by showing their block type (Thibaud Colas)
 * Make ModelAdmin InspectView footer actions consistent with other parts of the UI (Thibaud Colas)
 * Introduce a new auto-updating preview panel inside the page editor (Sage Abdullah)
 * Add support for Twitter and other text-only embeds in Draftail embed previews (Iman Syed, Paarth Agarwal)
 * Use new modal dialog component for privacy settings modal (Sage Abdullah)
 * Add `menu_item_name` to modify MenuItem's name for ModelAdmin (Alexander Rogovskyy, Vu Pham)
 * Add an extra confirmation prompt when deleting pages with a large number of child pages (Jaspreet Singh)
 * Adopt the slim header in page listing views, with buttons moved under the "Actions" dropdown, including addition of translation page in the parent "more" button (Paarth Agarwal)
 * Improve help block styles in Windows High Contrast Mode with less reliance on communication via colour alone (Anuja Verma)
 * Add a bottom border to top messages so they stand out from the header (Anuja Verma)
 * Replace latin abbreviations (i.e. / e.g.) with common English phrases so that documentation is easier to understand (Dominik Lech)
 * Add shortcut for accessing StreamField blocks by block name with new `blocks_by_name` and `first_block_by_name` methods on `StreamValue` (Tidiane Dia, Matt Westcott)
 * Extend support for custom user interface colours across almost all admin colours (Thibaud Colas)
 * Add HTML-aware max_length validation on RichTextField and RichTextBlock (Matt Westcott)
 * Remove undocumented `SearchableListMixin` (Sage Abdullah)
 * Extract filtering code from ReportView to generic IndexView (Sage Abdullah)