@@ -31,6 +31,7 @@ As part of the page editor redesign project sponsored by Google, we have made a 
 * RTL support: The editor’s UI now displays correctly in right-to-left languages.
 * Focus-aware placeholder: The editor’s placeholder text will now follow the user’s focus, to make it easier to understand where to type in long fields.
 * Empty heading highlight: The editor now highlights empty headings and list items by showing their type (“Heading 3”) as a placeholder, so content is less likely to be published with empty headings.
+* Split and insert: rich text fields can now be split while inserting a new StreamField block of the desired type.
 
 ### Live preview panel
 
